@@ -2,7 +2,7 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: TODO,v 1.8 2004/12/30 21:53:51 hadfield Exp $
+# $Id: TODO,v 1.9 2005/01/25 22:21:08 hadfield Exp $
 
 
 Ian:
@@ -25,18 +25,20 @@ Ian:
 
 Scott:
 
-* User sorting by rank, submissions, favorite language, join date
-
-* Implement memberlist
-
 * Merge main page and news page.
 
 * Implement user profiles.
 
 * Script search should grab languages/Categories lists from mysql.
 
-* Script listing / user listing needs to be able to span multiple pages.
+* Script listing / user listing need to use memberlist style listings.
 
+* Template module improvements:
+  - Make _counter, _is_odd, _is_even keywords instead of adding them to each
+    loop.
+  - Add a len keyword that will allow templates to do things like:
+    {IF len(THE_LOOP) > 0}
+  
 
 Anyone:
 * View Changelog
@@ -44,8 +46,6 @@ Anyone:
 * Create new versions of scripts
 
 * Rank scripts
-
-* Member List
 
 * Profile
 
