@@ -2,7 +2,7 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: ChangeLog,v 1.42 2005/01/25 21:25:38 hadfield Exp $
+# $Id: ChangeLog,v 1.43 2005/01/25 22:21:08 hadfield Exp $
 
 CURRENT STATUS: Broken. Various templates/modules need updating/fixing to
                 work with the new SiteModule backend. Note: some of the
@@ -13,6 +13,8 @@ CURRENT STATUS: Broken. Various templates/modules need updating/fixing to
  * Template bug fix
  * Added three default values to each multi-dimentional template loop; _counter,
    _is_odd, and _is_even.
+ * Implemented the memberlist page
+ * Added favorite language to the user table
 
 24 Jan 2004; Scott Hadfield <hadfield@gentoo.org>
  * Initial code for the memberlist page written
